Fix too long fw timestamp

--- a/host/web/style-common.css
+++ b/host/web/style-common.css
@@ -190,7 +190,8 @@ html {
 }
 
 .OverviewTableNodeFWTimestamp {
-    width: 150px;
+    width: 200px;
+    overflow: hidden;
     /* width: 25%; */
 }
 
